Fix client slider style on small laptop

--- a/_sass/home.sass
+++ b/_sass/home.sass
@@ -809,6 +809,7 @@ footer
 
   #client
     #client-container-fluid
+
       .header-section
         .header
           font-size: 32px
@@ -816,7 +817,7 @@ footer
         max-width: 750px
         .swiper-wrapper
           .swiper-slide
-            min-height: 280px
+            min-height: 245px
 
       .modal-content
         .modal-body
